Refactor : Js, Css y Views

--- a/public/stylus/lib/forms.styl
+++ b/public/stylus/lib/forms.styl
@@ -3,9 +3,8 @@
 		align-items center
 		display flex
 		margin-bottom 5px
-		input, select
 		.label
-			font-size 1.5rem
+			//font-size 1.5rem
 			font-weight bold
 			padding-right 5px
 			text-align right
@@ -14,6 +13,7 @@
 		.select
 			//select
 		.check
+			width auto
 			//radio/checkbox
 		.button
 			width auto
