--- a/views/collections/index.jade
+++ b/views/collections/index.jade
@@ -9,19 +9,20 @@ block content
 	template#field
 		article.inputContainer
 			label.label
-			//input(readonly).data
 			input.data
 
 	form.form.formLabelInput#formCollections
 		article.inputContainer
 			label.label(for="collection") Coleccion
 			select#collection(name="collection" size="5" required)
+
 				option(value="father") Mama/Padre
 				option(value="children") Niños
 				option(value="user") Usuarios
 				option(value="message") Mensajes
-				option(value="activitie") Actividades
+				option(value="activity") Actividades
 				option(value="history") Historias
+
 		article.alignItemsEnd
 			input.btn.btnInfo(type="button" id="findInCollection" value="Buscar")
 			input.btn.btnSuccess(type="button" id="AgregateInCollection" value="Agregar")
