--- a/views/templates/template.jade
+++ b/views/templates/template.jade
@@ -1,31 +1,26 @@
-doctype html
-html(lang='es')
-	head
-		meta(charset='UTF-8')
-		meta(name='viewport' content="width=device-width, user-scalable=no, initial-scale=1.0" )
-		block title
-		link(rel='stylesheet', href='/css/styles.css')
-	body
-		block modal
-		section.contentWidth
-			header(class="styleBlue")
-				nav
-					h3
-						a(href = "/") rememberHelp
-					article.itemsNavs
-						if user
-							a.item(href="/children/activities")
-								span.icon-children(tooltip="Niños")
-							a.item(href="/management/statistics")
-								span.icon-family(tooltip="Padres")
-							a.item(href="/logout")
-								span.icon-logout(tooltip="Cerrar Sesion")
-						else
-							a.item(href="/authenticate")
-								span.icon-login(tooltip="Iniciar Sesion")
-							a.item(href="/check-in")
-								span.icon-check-in(tooltip="Registrarse")
-				section.titleSection
-					block titleSection
-			block content
+extends base.jade
+block template
+	block modal
+	section.contentWidth
+		header(class="styleBlue")
+			nav
+				h3
+					a(href = "/") rememberHelp
+				article.itemsNavs
+					if user
+						a.item(href="/children/activities")
+							span.icon-children(tooltip="Niños")
+						a.item(href="/management/statistics")
+							span.icon-family(tooltip="Padres")
+						a.item(href="/logout")
+							span.icon-logout(tooltip="Cerrar Sesion")
+					else
+						a.item(href="/authenticate")
+							span.icon-login(tooltip="Iniciar Sesion")
+						a.item(href="/check-in")
+							span.icon-check-in(tooltip="Registrarse")
+			section.titleSection
+				block titleSection
+		block content
+	block script
 
