--- a/views/templates/templateAppChildren.jade
+++ b/views/templates/templateAppChildren.jade
@@ -1,29 +1,23 @@
-doctype html
-html(lang='es')
-	head
-		meta(charset='UTF-8')
-		meta(name='viewport' content="width=device-width, user-scalable=no, initial-scale=1.0" )
-		block title
-		link(rel='stylesheet', href='/css/styles.css')
-	body
-		block modal
-		section.contentWidth
-			header(class="#{classcss}")
-				nav
-					h3
-						a(href = "/") rememberHelp
-					article.itemsNavs
-						a.item(href="/children/activities")
-							span.icon-activities(tooltip="Actividades")
-						a.item(href="/children/messages")
-							span.icon-messages(tooltip="Mensajes")
-						a.item(href="/children/treasure")
-							span.icon-treasure(tooltip="Tesoros")
-						a.item(href="/logout")
-							span.icon-logout(tooltip="Cerrar Sesion")
-				section.titleSection
-					block titleSection
-			block content
-		script(src="/js/utilities.js")
-		script(src='/js/speech.js')
-		block script
+extends base.jade
+block template
+	block modal
+	section.contentWidth
+		header(class="#{classcss}")
+			nav
+				h3
+					a(href = "/") rememberHelp
+				article.itemsNavs
+					a.item(href="/children/activities")
+						span.icon-activities(tooltip="Actividades")
+					a.item(href="/children/messages")
+						span.icon-messages(tooltip="Mensajes")
+					a.item(href="/children/treasure")
+						span.icon-treasure(tooltip="Tesoros")
+					a.item(href="/logout")
+						span.icon-logout(tooltip="Cerrar Sesion")
+			section.titleSection
+				block titleSection
+		block content
+	script(src="/js/utilities.js")
+	script(src='/js/speech.js')
+	block script
