--- a/views/templates/templateAppManagement.jade
+++ b/views/templates/templateAppManagement.jade
@@ -1,28 +1,22 @@
-doctype html
-html(lang='es')
-	head
-		meta(charset='UTF-8')
-		meta(name='viewport' content="width=device-width, user-scalable=no, initial-scale=1.0" )
-		block title
-		link(rel='stylesheet', href='/css/styles.css')
-	body
-		block modal
-		section.contentWidth
-			header(class="#{classcss}")
-				nav
-					h3
-						a(href = "/") rememberHelp
-					article.itemsNavs
-						a.item(href="/management/statistics")
-							span.icon-statistics(tooltip="Estadisticas")
-						a.item(href="/management/line-evolution")
-							span.icon-timeline(tooltip="Linea De Evolucion")
-						a.item(href="/management/collections")
-							span.icon-database(tooltip="Collecione")
-						a.item(href="/logout")
-							span.icon-logout(tooltip="Cerrar Sesion")
-				section.titleSection
-					block titleSection
-			block content
-		script(src="/js/utilities.js")
-		block script
+extends base.jade
+block template
+	block modal
+	section.contentWidth
+		header(class="#{classcss}")
+			nav
+				h3
+					a(href = "/") rememberHelp
+				article.itemsNavs
+					a.item(href="/management/statistics")
+						span.icon-statistics(tooltip="Estadisticas")
+					a.item(href="/management/line-evolution")
+						span.icon-timeline(tooltip="Linea De Evolucion")
+					a.item(href="/management/collections")
+						span.icon-database(tooltip="Collecione")
+					a.item(href="/logout")
+						span.icon-logout(tooltip="Cerrar Sesion")
+			section.titleSection
+				block titleSection
+		block content
+	script(src="/js/utilities.js")
+	block script
