--- a/views/collections/index.jade
+++ b/views/collections/index.jade
@@ -25,6 +25,7 @@ block content
 		article.alignItemsEnd
 			input.btn.btnInfo(type="button" id="findInCollection" value="Buscar")
 			input.btn.btnSuccess(type="button" id="AgregateInCollection" value="Agregar")
+			input.btn.btnError(type="button" id="emptyCollection" value="Vaciar")
 
 	section.documents#results
 	section#addDocument
