Añadiendo Funciones pre-save a modelos DB, refactor general de consultas a la DB y Avance en procesos estadisticos

--- a/public/stylus/OOCSS.styl
+++ b/public/stylus/OOCSS.styl
@@ -5,6 +5,9 @@ basePurple = #9C27b0
 baseRed = #EA4235
 baseYellow = #FBBC05
 
+.contentWidth
+	transition 1s all linear
+
 .alignItemsEnd
 	display flex
 	justify-content flex-end
