--- a/public/stylus/styles.styl
+++ b/public/stylus/styles.styl
@@ -46,6 +46,8 @@ header
 		position relative
 		transition all 2s linear
 		width 100%
+		&:last-child
+			margin-bottom 0
 		.imgActivity
 			width 100%
 		.titleActivity
