--- a/views/management/statistics.jade
+++ b/views/management/statistics.jade
@@ -5,12 +5,19 @@ block title
 block titleSection
 	p Estadisticas
 
+block modal
+	section#statisticsWindow.modal.modal-hide(data-rol-modal="modal" data-contentModal data-referenceModal="#modal")
+		section.contentModal
+			article.titleModal
+			article.bodyModal
+			article.footerModal
+				button.btn.btnError(data-closeModal="#modal" data-rol-modal="close" data-referenceModal="#modal") Volver
 block content
 	section.statistics
-		article.statistic
+		article.statistic.statisticToday
 			h2 Hoy
 			p Resumen de la actividad de un niñ@ en el dia actual
-				include ../templatesStatistics/today.jade
+			include ../templatesStatistics/today.jade
 
 	section.containerOptionsStatistic
 block script
