Cambio de nombre a coleccion 'father a parents'

--- a/views/users/checkIn.jade
+++ b/views/users/checkIn.jade
@@ -24,7 +24,7 @@ block content
 		fieldset
 			legend Familiar
 			article.inputContainer
-				input(type="text" name="nameFamily" id="nameFamily" placeholder="Nombre Padre" required)
+				input(type="text" name="nameParent" id="nameParent" placeholder="Nombre Padre" required)
 			article.inputContainer
 				input(type="number" name="idFamily" id="idFamily" placeholder="Identificacion Familiar" required)
 		fieldset
