--- a/views/templatesStatistics/rangeDates.jade
+++ b/views/templatesStatistics/rangeDates.jade
@@ -1,9 +1,9 @@
 template.optionsStatistic
 	form.form.formLabelInput#rangeDate
 		article.inputContainer
-			label.label(for="children") niñ@
+			label.label(for="children") Niñ@
 			select(type='date', name='children' id='children' required)
-				for children in father.children
+				for children in parent.children
 					option(value="#{children.id}") #{children.name}
 		article.inputContainer
 			label.label(for="dateInit") Fecha Inicial
