--- a/views/templatesStatistics/today.jade
+++ b/views/templatesStatistics/today.jade
@@ -1,9 +1,9 @@
 template.optionsStatistic
 	form.form.formLabelInput#today
 		article.inputContainer
-			label.label(for="children") niñ@
+			label.label(for="children") Niñ@
 			select(type='date', name='children' id='children' required)
-				for children in father.children
+				for children in parent.children
 					option(value="#{children.id}") #{children.name}
 		article.inputContainer.alignItemsEnd
 			button.btn.btnSuccess(type="submit")
