Añadiendo Validaciones a formularios Frontend y a procesos Backend de usuarios

--- a/public/stylus/icomoon/style.styl
+++ b/public/stylus/icomoon/style.styl
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('fonts/icomoon.eot?ayxkk5');
-    src:    url('fonts/icomoon.eot?ayxkk5#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?ayxkk5') format('truetype'),
-        url('fonts/icomoon.woff?ayxkk5') format('woff'),
-        url('fonts/icomoon.svg?ayxkk5#icomoon') format('svg');
+    src:    url('fonts/icomoon.eot?2pn4dv');
+    src:    url('fonts/icomoon.eot?2pn4dv#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?2pn4dv') format('truetype'),
+        url('fonts/icomoon.woff?2pn4dv') format('woff'),
+        url('fonts/icomoon.svg?2pn4dv#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -24,6 +24,9 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-statitics-pie:before {
+    content: "\e90f";
+}
 .icon-check-in:before {
     content: "\e90c";
 }
@@ -32,6 +35,9 @@
 }
 .icon-family:before {
     content: "\e909";
+}
+.icon-timeline:before {
+    content: "\e900";
 }
 .icon-question:before {
     content: "\e907";
@@ -60,7 +66,10 @@
 .icon-logout:before {
     content: "\e90b";
 }
-.icon-timeline:before {
-    content: "\e900";
+.icon-statitics-bars:before {
+    content: "\e90d";
+}
+.icon-statitics-list:before {
+    content: "\e90e";
 }
 
