--- a/public/stylus/lib/buttons.styl
+++ b/public/stylus/lib/buttons.styl
@@ -15,24 +15,24 @@
 		box-shadow 0px 0px transparent
 		transition .1s box-shadow
 	&Error
-		background-color baseRed
+		background-color baseRed !important
 		box-shadow 0px 6px #9F0E03
 	&Help
-		background-color baseYellow
+		background-color baseYellow !important
 		box-shadow 0px 6px #9A7200
 		cursor help
 		margin-top 0 !important
 	&Info
-		background-color baseBlue
+		background-color baseBlue !important
 		box-shadow 0px 6px #0759E4
 	&Success
-		background-color baseGreen
+		background-color baseGreen !important
 		box-shadow 0px 6px #097626
 	&Round
 		border-radius 50%
 		height 300px !important
 		width 300px !important
 	&:disabled
-		background-color colorBtnDiabledBackground
+		background-color colorBtnDiabledBackground !important
 		box-shadow 0px 6px colorBtnDiabledBorder
 		cursor not-allowed
