--- a/views/collections/index.jade
+++ b/views/collections/index.jade
@@ -15,7 +15,7 @@ block content
 		article.inputContainer
 			label.label(for="collection") Coleccion
 			select#collection(name="collection" size="6" required)
-				option(value="father") Mama/Padre
+				option(value="parent") Pariente
 				option(value="children") Niños
 				option(value="user") Usuarios
 				option(value="message") Mensajes
