--- a/views/management/statistics.jade
+++ b/views/management/statistics.jade
@@ -16,13 +16,13 @@ block content
 	section.statistics
 		article.statistic.statisticToday(data-statistic="today")
 			h2 Hoy
-			span.type.icon-
+			span.icon-statitics-list
 			p Listado de las actividades de un niñ@ en el dia actual
 			include ../templatesStatistics/today.jade
 	section.statistics
 		article.statistic.statisticsRangeDates(data-statistic="rangeDate")
 			h2 Rango De Fechas
-			span.type.icon-
+			span.icon-statitics-bars
 			p Grafica Barras comparativa. Actidades completadas y no completadas en un rango de fecha determinado
 			include ../templatesStatistics/rangeDates.jade
 
