--- a/public/stylus/lib/forms.styl
+++ b/public/stylus/lib/forms.styl
@@ -22,6 +22,7 @@
 		appearance: none
 		border 1px solid gray
 		border-radius 3px
+		background-color white
 		margin 0 5px
 		outline none
 		padding 3px
