refactor Backend general y Mejorar en errores de Validator

--- a/views/templates/template.jade
+++ b/views/templates/template.jade
@@ -22,5 +22,7 @@ block template
 			section.titleSection
 				block titleSection
 		block content
+
 	block script
+	script(src='/js/lib/markdown.js')
 
