--- a/public/stylus/lib/forms.styl
+++ b/public/stylus/lib/forms.styl
@@ -3,11 +3,13 @@
 		align-items center
 		display flex
 		margin-bottom 5px
+		flex-wrap wrap
 		.label
-			//font-size 1.5rem
+			margin-top 5px
 			font-weight bold
 			padding-right 5px
-			text-align right
+			text-align center
+			width 100%
 		.input
 			//input
 		.select
@@ -37,5 +39,11 @@
 		input, select
 			margin 0 auto
 			width 50%
-
+.fieldset
+	margin 20px 0
+	border-radius 3px
+	.legend
+		font-weight bold
+		border-left 1px solid gray
+		padding 0 10px
 
