Añaiendo campo de hora (hour) a esquema de 'histories', Añadiendo notificaciones custom y refactor de estilos y templates

--- a/public/stylus/lib/forms.styl
+++ b/public/stylus/lib/forms.styl
@@ -30,9 +30,12 @@
 		padding 3px
 		&:focus
 			box-shadow 0px 0px 11px 0px rgba(0,0,0,0.1)
+		&:disabled
+			background rgba(0,0,0,0.1)
 	&LabelInput
 		input, select
 			width 70%
+			margin 0 auto
 		.label
 			width 70%
 	&OnlyInput
