--- a/public/stylus/styles.styl
+++ b/public/stylus/styles.styl
@@ -1,6 +1,7 @@
 @import 'normalize'
 @import 'OOCSS'
 @import 'lib/modal'
+@import 'lib/notifications'
 @import 'lib/buttons'
 @import 'lib/forms'
 
@@ -187,6 +188,11 @@ header
 	position fixed
 	width 100%
 /*Estadisticas*/
+
+.errors
+	background-color #ea4235
+	color #fff
+	padding 10px
 
 .styleBlue
 	background-color baseBlue
