--- a/views/management/statistics.jade
+++ b/views/management/statistics.jade
@@ -17,13 +17,13 @@ block content
 		article.statistic.statisticToday(data-statistic="today")
 			h2 Hoy
 			span.icon-statitics-list
-			p Listado de las actividades de un niñ@ en el dia actual
+			p Listado de las actividades completadas de un niñ@ en el dia actual.
 			include ../templatesStatistics/today.jade
 	section.statistics
 		article.statistic.statisticsRangeDates(data-statistic="rangeDate")
 			h2 Rango De Fechas
 			span.icon-statitics-bars
-			p Grafica Barras comparativa. Actidades completadas y no completadas en un rango de fecha determinado
+			p Grafica de Barras comparativa. Actidades completadas/incompletadas en un rango de fecha determinado.
 			include ../templatesStatistics/rangeDates.jade
 
 	section.containerOptionsStatistic
