--- a/views/templates/templateAppManagement.jade
+++ b/views/templates/templateAppManagement.jade
@@ -5,7 +5,7 @@ block template
 		header(class="#{classcss}")
 			nav
 				h3
-					a(href = "/") rememberHelp
+					a(href = "/") Remember Help
 				article.itemsNavs
 					a.item(href="/management/statistics")
 						span.icon-statistics(tooltip="Estadisticas")
