--- a/views/templatesStatistics/today.jade
+++ b/views/templatesStatistics/today.jade
@@ -12,6 +12,9 @@ template.resultStatistics
 	article
 		h1.nameActivity
 		p
-			span.timeActivity
-			span.stateActivity
+			span #[strong Hora de la Actividad : ] #[span.timeActivity]
+		p
+			span #[strong Hora de completado : ] #[span.timeHistory]
+		p
+			span #[strong Completada : ] #[span.timeText]
 
