--- a/views/users/checkIn.jade
+++ b/views/users/checkIn.jade
@@ -10,9 +10,9 @@ block content
 		fieldset.fieldset#dataChildren
 			legend.legend Niñ@
 			article.inputContainer
-				input(type="text" name="nameChildren" id="nameChildren" placeholder="Nombre Niño" required)
+				input(type="number" name="idChildren" id="idChildren" placeholder="Identificación Niñ@" required)
 			article.inputContainer
-				input(type="number" name="idChildren" id="idChildren" placeholder="Identificacion Niñ@" required)
+				input(type="text" name="nameChildren" id="nameChildren" placeholder="Nombre Niño" required)
 			article.inputContainer
 				input(type="number" min="5" name="ageChildren" id="ageChildren" placeholder="Edad Niño" required)
 			article.inputContainer
@@ -32,9 +32,9 @@ block content
 		fieldset.fieldset#dataParent
 			legend.legend Familiar
 			article.inputContainer
-				input(type="text" name="nameParent" id="nameParent" placeholder="Nombre Padre" required)
+				input(type="number" name="idFamily" id="idFamily" placeholder="Identificación Familiar" required)
 			article.inputContainer
-				input(type="number" name="idFamily" id="idFamily" placeholder="Identificacion Familiar" required)
+				input(type="text" name="nameParent" id="nameParent" placeholder="Nombre Familiar" required)
 			fieldset.fieldset
 				legend.legend Usuario
 				article.inputContainer
